fix(webui): fix chip contrast

--- a/webui/src/css/sass/app.scss
+++ b/webui/src/css/sass/app.scss
@@ -157,3 +157,26 @@ body {
     background-color: rgba($app-text-grey, 0.1);
   }
 }
+.body--dark .app-chip {
+  &-accent, &-rule {
+    background-color: rgba($accent, 0.25);
+  }
+  &-green, &-entry-points {
+    background-color: rgba($app-text-green, 0.25);
+  }
+  &-purple, &-name {
+    background-color: rgba($app-text-purple, 0.25);
+  }
+  &-warning, &-service {
+    background-color: rgba($warning, 0.25);
+  }
+  &-negative, &-error {
+    background-color: rgba($negative, 0.25);
+  }
+  &-green-2, &-options {
+    background-color: rgba($app-text-green-2, 0.25);
+  }
+  &-marine, &-interval {
+    background-color: rgba($app-text-grey, 0.25);
+  }
+}
